--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -11,7 +11,7 @@
 <body>
     <div class="nav-con">
     <header>
-        <h1> Microserve</h1>
+        <h1 id="brand-logo">🔥Microserve</h1>
         <div class="search">
             <input type="text" id="search" placeholder="Search...">
             <button id="searchButton">Search</button>
@@ -24,7 +24,7 @@
     </header>
 
 
-    <nav>
+    <nav id="mainNav">
         <ul>
             <li><a href="#">Home</a></li>
             <li class="dropdown">
