--- a/views/vendor.ejs
+++ b/views/vendor.ejs
@@ -7,10 +7,37 @@
     <title>Vendor Center</title>
 </head>
 <body>
+    <div class="nav-con">
+        <header>
+            <h1 id="brand-logo">🔥Microserve</h1>
+            <div class="search">
+                <input type="text" id="search" placeholder="Search...">
+                <button id="searchButton">Search</button>
+            </div>
+            
+            <div id="cart">
+                <span id="cart-count">0</span>
+                <button id="view-cart"> <i class="fas fa-bag-shopping"></i> </button>
+            </div>
+        </header>
+    
+    
+        <nav id="mainNav">
+            <ul>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Add Products</a></li>
+           
+            </ul>
+    
+    
+        </nav>
+    
+    </div>
+    
     <div class="login-container">
-        <h2 class="focus-title">Seller Center</h2>
         <div class="focus-img">
-            <img src="" />
+            <h2 class="focus-title">Seller Center</h2>
+            <img src="./assets/vendor.jpg" alt="vendor holding credit card" />
         </div>
 
         <div class="focus-form">
