--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="/Shop">Shop</a></li>    
-                <li><a href="/products/new">Vendors</a></li>
+                <li><a href="/vendor">Vendors</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
             <div class="login">
