--- a/public/css/vendor.css
+++ b/public/css/vendor.css
@@ -1,15 +1,65 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100&display=swap');
+*{
+    font-family: Roboto, arial, helvetica, sans-serif;
+}
+
+
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
     margin: 0;
+    justify-content: center;
+    align-items: center;
+    background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('../assets/Shopping-cart.jpg') no-repeat fixed;
+    background-size: cover;
+}
+
+ul, h1, h2, p, ul, li, a{
+    list-style: none;
+    text-decoration: none;
+
+}
+
+a{
+    padding: 0.5rem;
+    color: #fff;
+}
+
+a:hover{
+    color: #e74c3c;
+}
+
+/* Navbar */
+header {
+    background-color: #333;
+    color: white;
+    padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.focus-title {
+    font-size: 1.5rem;
+    color:  #e74c3c;
+}
+
+.nav-list{
+    position: right;
+    display: flex;
+}
+
+
+/* Login Form */
+.focus{
+
+    height: 100%;
 }
 
 .login-container {
-    text-align: center;
     display: flex;
     padding: 4rem;
+    background-color: #3333339c;
 }
 
 .focus-img{
@@ -19,7 +69,9 @@ body {
 }
 
 .focus-img img{
-    height: 4rem;
+    height: 15rem;
+    border-radius: 1rem;
+
 }
 
 .focus-form {
@@ -28,11 +80,75 @@ body {
 
 
 }
+
 .focus-form form{
     display: flex;
     flex-direction: column;
     margin-top: 50%;
 }
 
+.focus-form form input[type="email"]{
+    border: none;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    margin-bottom: 2rem;
+    font-size: 1rem;
+    width: 20rem;
+}
+
+.focus-form form input[type="password"]{
+    border: none;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    margin-bottom:4rem;
+    font-size: 1rem;
+    width: 20rem;
+}
+
+.focus-form form input[type="submit"]{
+    background-color: #e74c3c;
+    width: 9rem;
+    color: white;
+    border: none;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    cursor: pointer;
+    font-size: 1rem;
+    margin-left: 0.5rem;
+    transition: background-color 0.3s ease;
+}
 
 
+
+/* Mobile View */
+
+/* Media Query for Mobile View */
+@media screen and (max-width: 768px) {
+    .login-container{
+        flex-direction: column;
+        padding: 1rem;
+    }
+
+    .focus-img{
+        padding: 0;
+    }
+
+    .focus-form form{
+        margin-top: 2rem;
+    }
+
+    .focus-form form input[type="email"]{
+        margin-bottom: 1rem;
+        padding: 1.9rem;
+    }
+    .focus-form form input[type="password"]{
+        margin-bottom: 1rem;
+        padding: 1.9rem;
+    }
+
+    .nav-list{
+        display: none;
+    }
+
+
+}
