--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,20 +34,11 @@
 
         <section class="features">
             <div class="feature">
-                <img src="./assets/Shopping-cart.jpg" alt="Feature 1">
+                <img src="./assets/toteBag.png" alt="Feature 1">
                 <h2>Luxurious Rooms</h2>
                 <p>Experience comfort and style in our well-appointed rooms.</p>
             </div>
-            <div class="feature">
-                <img src="./assets/Shopping-cart.jpg" alt="Feature 2">
-                <h2>World-Class Dining</h2>
-                <p>Savor exquisite dishes from our renowned chefs.</p>
-            </div>
-            <div class="feature">
-                <img src="./assets/Shopping-cart.jpg" alt="Feature 3">
-                <h2>Relaxation &amp; Spa</h2>
-                <p>Indulge in relaxation with our spa and wellness services.</p>
-            </div>
+   
         </section>
     </main>
 
