--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -76,7 +76,7 @@
         <% for (let i = 0; i < products.length; i++) { %>
        
             <section class="product">
-                <img src="./assets/banner-1.jpg" alt="Product 2">
+                <img src="./assets/vendor.jpg" alt="Product 2">
                 <h2><%= products[i].productName %></h2>
                 <p><%= products[i].currentTag %></p>
                 <button class="add-to-cart" data-price="19.99">Add to Cart</button>
