--- a/views/vendor.ejs
+++ b/views/vendor.ejs
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/vendor.css">
-    <script src="./js/vendor.js" defer></script>
+     <link rel="stylesheet" href="./css/vendor.css">
+     <script src="./js/vendor.js" defer></script> 
     <title>Vendor Center</title>
 </head>
+<style>
+ 
+
+</style>
 <body>
     <div class="nav-con">
         <header>
