--- a/views/vendorProducts.ejs
+++ b/views/vendorProducts.ejs
@@ -123,7 +123,7 @@
                               <!-- Add table data rows here -->
                         <% for (let i = 0; i < products.length; i++) { %>
                             <tr>
-                                <td><%= products[i].productId %></td>
+                                <td><%= products[i]._id %></td>
                                 <td><%= products[i].productName %></td>
                                 <td><%= products[i].productDescription %></td>
                                 <td><%= products[i].productType %></td>
