Add product styling
Adde styling for the add products page

--- a/views/vendorProducts.ejs
+++ b/views/vendorProducts.ejs
@@ -120,7 +120,7 @@
                     </thead>
 
                     <tbody>
-                              <!-- Add table data rows here -->
+                              <!-- Add table product rows here -->
                         <% for (let i = 0; i < products.length; i++) { %>
                             <tr>
                                 <td><%= products[i]._id %></td>
