--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -3,18 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+
+        body {
+            background-color: #f0f0f0; /* Light grey background */
+            font-family: Arial, sans-serif;
+            height: 100vh;
+            margin: 0;
+            background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('../assets/Shopping-cart.jpg') no-repeat fixed;
+            background-size: cover;
+        }
+
+        form {
+            max-width: 400px;
+            padding: 2rem;
+            background-color: white;
+            border: 1px solid #ccc;
+            border-radius: 10px; /* Add rounded edges */
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .form-body{
+            height: 80vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        label {
+            color: black; /* Black label text */
+            display: block;
+            margin-top: 10px;
+        }
+
+        input {
+            width: 100%;
+            padding: 10px; /* Equal padding on all sides */
+            margin-top: 5px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        button {
+            background-color: yellow; /* Yellow button background */
+            color: black; /* Black button text */
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+
+        button:hover {
+            background-color: orange; 
+        }
+
+        a{
+    padding: 0.5rem;
+    color: #fff;
+}
+
+a:hover{
+    color: #e74c3c;
+}
+
+/* Navbar */
+header {
+    background-color: #333;
+    top:0;
+    color: white;
+    padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+    </style>
     <title>Add Product</title>
 </head>
 <body>
-    <h1>Add a New Product</h1>
+
+    <header>
+        <h1 id="brand-logo" style="cursor: pointer;">🔥Microserve</h1>
+        <ul class="nav-list">
+      
+        </ul>
+        
+    </header>
+
+    <div class="form-body">
 
     <form action="/products/add" method="POST">
+        <h2>Add Products</h2>
         <label for="productName">Product Name:</label>
         <input type="text" id="productName" name="productName" required><br>
 
         <label for="productType">Product Type:</label>
         <input type="text" id="productType" name="productType" required><br>
-        
+
         <label for="recommendation">Recommendation:</label>
         <input type="text" id="recommendation" name="recommendation" required><br>
 
@@ -25,5 +111,7 @@
 
         <button type="submit">Add Product</button>
     </form>
+
+</div>
 </body>
 </html>
