--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -90,7 +90,7 @@ header {
 <body>
 
     <header>
-        <h1 id="brand-logo" style="cursor: pointer;">🔥Microserve</h1>
+        <h1 id="brand-logo" style="cursor: pointer;">Shop🛒</h1>
         <ul class="nav-list">
       
         </ul>
