--- a/views/vendorProducts.ejs
+++ b/views/vendorProducts.ejs
@@ -97,7 +97,7 @@
 <body>
     <div class="nav-con">
         <nav>
-            <h1 id="brand-logo">🔥Microserve</h1>
+            <h1 id="brand-logo">Shop🛒</h1>
             
         </nav>
 
