--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flammy Microserve</title>
+    <title>Shop🛒</title>
     <link rel="stylesheet" href="./css/home.css">
     <link rel="icon" href="./assets/Microservelogo.svg" type="img/svg+xml">
 </head>
