--- a/views/products.ejs
+++ b/views/products.ejs
@@ -52,7 +52,7 @@
 <body>
     <div class="nav-con">
         <nav>
-            <h1 id="brand-logo">🔥Microserve</h1>
+            <h1 id="brand-logo">Shop🛒</h1>
 
          <% for( let index = 0; index < products.length; index++ ) { %>
             <%= products[index].storeName %>
