--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flammy Microserve - Sign Up</title>
+    <title>Shop🛒 - Sign Up</title>
     <link rel="stylesheet" href="./css/credentials.css">
 </head>
 <body>
