--- a/views/vendor.ejs
+++ b/views/vendor.ejs
@@ -14,7 +14,7 @@
 <body>
     <div class="nav-con">
         <header>
-            <h1 id="brand-logo" style="cursor: pointer;">🔥Microserve</h1>
+            <h1 id="brand-logo" style="cursor: pointer;">Shop🛒</h1>
             <ul class="nav-list">
                 <li><a href="#">Products</a></li>
                 <li><a href="#">Add Products</a></li>
@@ -36,7 +36,7 @@
                 <form class="login-form">
                     <input type="email" placeholder="Email" required />
                     <input type="password" placeholder="password" required />
-                    <input type="submit" value="Login" />
+                    <input type="submit" value="Login"/>
                 </form>
                 
             </div>
